# epsa-rag

./: .gitignore  pyproject.toml  requirements.txt
configs/: experiment.yaml  retrieval.yaml
scripts/: analyze_epsa_failures.py  analyze_hybrid_fusion_trace.py  analyze_retrieval_eval_failures.py  build_dense_index.py  build_hotpotqa_question_file_from_chunks.py  check_bm25_retriever.py  check_corpus_store.py  check_dense_retriever.py  inspect_hotpotqa_question.py  inspect_hybrid_retrieval.py  prepare_hotpotqa.py  run_epsa_oracle_context_diagnostics.py  run_epsa_rag.py  run_retrieval_eval.py  run_two_hop_baseline_eval.py  tune_rrf_k_eval.py
src/epsa_rag/config/: __init__.py  retrieval_config.py
src/epsa_rag/corpus/: __init__.py  corpus_store.py
src/epsa_rag/datasets/: schemas.py  (+2 more)
tests/: test_bm25_retriever.py  test_chunk_builder.py  test_corpus_store.py  test_dense_retriever.py  test_epsa_chunk_evidence_analyzer.py  test_epsa_conservative_calibration.py  test_epsa_context_pruner.py  test_epsa_controller.py  test_epsa_evidence_graph_builder.py  test_epsa_evidence_path_searcher.py  test_epsa_evidence_scorer.py  test_epsa_evidence_scorer_question_analysis_compatibility.py  test_epsa_evidence_unit_extractor.py  test_epsa_failure_analysis.py  test_epsa_next_query_generator.py  test_epsa_oracle_context_diagnostics.py  test_epsa_question_analyzer.py  test_epsa_rag_metrics.py  test_epsa_rag_pipeline_helpers.py  test_epsa_sufficiency_decision_engine.py  test_fusion.py  test_hotpotqa_loader.py  test_retrieval_evaluator.py  test_retrieval_metrics.py  test_two_hop_baseline.py
(+32 files in other folders)
